--- a/ProyectoGrafos/src/Ventanas/interfazInstrucciones.form
+++ b/ProyectoGrafos/src/Ventanas/interfazInstrucciones.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -44,7 +45,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="60" width="600" height="280"/>
+          <AbsoluteConstraints x="20" y="60" width="630" height="280"/>
         </Constraint>
       </Constraints>
 
@@ -55,7 +56,7 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="&#xa;"/>
+            <Property name="text" type="java.lang.String" value="Bienvenidos a DELIVERY, un sistema dise&#xf1;ado por Oriana Gonzalez, Luis Stanislao y Guillermo&#xa;Sosa que permite a empleados encargados de realizar las entregas, optimizar sus recorridos a &#xa;partir de las rutas entre los destinos de entrega.&#xa;&#xa;A trav&#xe9;s de la ventana de Menu podr&#xe1; realizar distintas acciones.&#xa;&#xa;Si desea cargar un archivo de datos especifico, oprima la primera opci&#xf3;n llamada &quot;Cargar &#xa;Archivo de Datos&quot;, se abrir&#xe1; una ventana que le permitir&#xe1; localizar su archivo .txt en su&#xa;ordenador. En caso de no cargar ning&#xfa;n archivo de datos, estar&#xe1; utilizando un archivo de &#xa;datos proporcionado por el sistema.&#xa;&#xa;Si desea registrar un nuevo cliente, podr&#xe1; hacerlo oprimiendo la segunda opsi&#xf3;n llamada&#xa;&quot;Registrar Nuevo Cliente&quot;, esto lo abrir&#xe1; otra ventana donde deber&#xe1; colocar datos personales &#xa;del cliente, iD del punto a donde se conctar&#xe1; y la distancia entre dichos puntos. A su derecha&#xa;tendr&#xe1; una pantalla con los iDs de los clientes ya registrados en el archivo de datos que se &#xa;est&#xe9; utilizando y en la parte inferior contar&#xe1; con dos botones, uno para registrar los datos y&#xa;otro para guardar dichos datos en su archivo de datos.&#xa;&#xa;Si desea crear una nueva ruta entre cualesquiera dos clientes ya existentes en el archivo de &#xa;datos que se est&#xe9; utilizando podr&#xe1; hacerlo oprimiendo la tercera opci&#xf3;n llamada &quot;Crear &#xa;Nueva Ruta&quot;, esto abrir&#xe1; otra ventana donde deber&#xe1; colocar los iDs de los dos clientes que&#xa;va a conectar y la distancia entre dichos puntos. De igual manera que el la ventana de registro&#xa;contar&#xe1; con dos botones en la zona inferior para Registrar y Guardar los nuevos datos.&#xa;&#xa;Para realizar un encargo (&quot;Delivery&quot;), oprima la cuarta opci&#xf3;n en el menu llamada &quot;Hacer un&#xa;Delivery&quot;, esto abrir&#xe1; una nueva ventana donde tendr&#xe1; dos ventanas. La ventana izquierda&#xa;tendr&#xe1; los datos registrados en el archivo de datos seleccionado y en la ventana derecha&#xa;podr&#xe1; observar el recorrido del grafo por DFS y BFS si oprime dichos botones que estan por&#xa;encima de la pantalla. En la parte inferior tendr&#xe1; la opcion de eonctrar el camino mas corto &#xa;entre la empresa y cualquier cliente registrado. Para esto deber&#xe1; colocar el iD del cliente al &#xa;que desea hacer el encargo en el recuadro indicado y oprimir cualesquiera de los dos &#xa;botones FLOYD o DJISTRAK dependiendo del metodo que desee utilizar. Esto abrir&#xe1; una ventana&#xa;donde podr&#xe1; observar gr&#xe1;ficamente el grafo y el recorrido solicitado.&#xa;&#xa;Y por &#xfa;ltimo, tiene la quita opci&#xf3;n en el menu, llamado &quot;Graficar Grafo&quot; donde al oprimirse se&#xa;abrir&#xe1; una ventana que graficar&#xe1; el grafo del archivo eleccionado. &#xa;&#xa;Esperamos que esta informaci&#xf3;n le ayude a tener la mejor experiencia posible al utilizar el&#xa;sistema DELIVERY.&#xa;"/>
           </Properties>
         </Component>
       </SubComponents>
